Fixed header layout on smaller screens (#1581)

--- a/src/main/resources/assets/admin/common/styles/api/app/wizard/wizard-header.less
+++ b/src/main/resources/assets/admin/common/styles/api/app/wizard/wizard-header.less
@@ -10,12 +10,12 @@
 
     &.@{_CLS_PREFIX}large {
       min-width: 245px;
-      font-size: 32px;
+      font-size: 1.65rem;
     }
     &.@{_CLS_PREFIX}middle {
       min-width: 100px;
       margin-top: 2px;
-      font-size: 16px;
+      font-size: 1rem;
     }
 
     &[name="displayName"], &[name="name"] {
@@ -33,7 +33,7 @@
     height: 28px;
     line-height: 28px;
     margin: 0 0 0 4px;
-    font-size: 16px;
+    font-size: 1rem;
     color: @admin-font-gray2;
     .ellipsis();
   }
@@ -47,7 +47,18 @@
 ._0-240, ._240-360, ._360-540 {
   .thumbnail-uploader-el + .wizard-header,
   .@{_COMMON_PREFIX}form-icon + .wizard-header {
-    margin-left: 86px;
+    margin-left: 56px;
     margin-right: 40px;
+  }
+
+  .thumbnail-uploader-el {
+    width: 32px;
+    height: 32px;
+    margin: 5px 10px;
+
+    .dropzone-container .dropzone {
+      height: 100%;
+      min-height: auto;
+    }
   }
 }
